deployment/consumerEU.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carconsumer-eu
spec:
  replicas: 2
  selector:
    matchLabels:
      app: carconsumer-eu
  template:
    metadata:
      labels:
        app: carconsumer-eu
    spec:
      containers:
        - name: carconsumer
          image: armodilo/carconsumer:v1.0.1
