deployment/consumerOTHER.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carconsumer-other
spec:
  replicas: 2
  selector:
    matchLabels:
      app: carconsumer-other
  template:
    metadata:
      labels:
        app: carconsumer-other
    spec:
      containers:
        - name: carconsumer
          image: armodilo/carconsumer:v1.0.2
