deployment/location.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locationapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: locationapi
  template:
    metadata:
      labels:
        app: locationapi
    spec:
      containers:
        - name: locationapi
          image: armodilo/locationapi:v1.0.5
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: locationapi
spec:
  selector:
    app: locationapi
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
