deployment/producer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carproducer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: carproducer
  template:
    metadata:
      labels:
        app: carproducer
    spec:
      containers:
        - name: carproducer
          image: armodilo/carproducer:v1.0.8
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
            
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: carproducer
spec:
  selector:
    app: carproducer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
